# text-lens

./: .#README.md  .#app.py  README.md  app.py  directory-structure.txt  pyproject.toml  requirements.txt
