# pyproject.toml

[build-system]
requires = ["setuptools>=45", "wheel"]
build_backend = "setuptools.build_meta"

[project]
name = "text-lens"
version = "0.1.0"
description = "A text analysis tool"
author = [{name = "Adrian Rubio Punal", email = "adrian.rubio.punal@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
text-lens = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]

